package step1;

/**
 * Created by ethan.kim on 2018. 3. 3..
 */
public class MallardDuck extends Duck {

    @Override
    public void display() {
        System.out.println("MallardDuck");
    }
}
