package step1;

/**
 * Created by ethan.kim on 2018. 3. 3..
 */
public class RedHeadDuck extends Duck {

    @Override
    public void display() {
        System.out.println("RedHeadDuck");
    }
}
