package step2;

/**
 * Created by ethan.kim on 2018. 3. 3..
 */
public class DecoyDuck extends Duck {

    @Override
    public void display() {
        System.out.println("DecoyDuck");
    }
}
