package step2;

/**
 * Created by ethan.kim on 2018. 3. 3..
 */
public class Duck {

    public void swim() {
        System.out.println("swim");
    }

    public void display() {
        System.out.println("Duck");
    }
}
