package step2;

/**
 * Created by ethan.kim on 2018. 3. 3..
 */
public interface Flyable {
    void fly();
}
