package step3;

/**
 * Created by ethan.kim on 2018. 3. 3..
 */
public interface FlyBehavior {

    void fly();
}
