package step3;

/**
 * Created by ethan.kim on 2018. 3. 3..
 */
public class FlyWithWings implements FlyBehavior {

    @Override
    public void fly() {
        System.out.println("FlyWithWings");
    }
}
