@startuml

title __STRATEGY's Class Diagram__\n

  package step4_lambda {
    class ActiveStrategy {
    }
  }
  

  package step5_lambda_another {
    interface Computation {
    }
  }
  

  package step2 {
    class DecoyDuck {
    }
  }
  

  package step2 {
    class Duck {
    }
  }
  

  package step3 {
    abstract class Duck {
    }
  }
  

  package step1 {
    class Duck {
    }
  }
  

  package step3 {
    interface FlyBehavior {
    }
  }
  

  package step3 {
    class FlyNoWay {
    }
  }
  

  package step3 {
    class FlyWithWings {
    }
  }
  

  package step2 {
    interface Flyable {
    }
  }
  

  package step5_lambda_another {
    class IntDifference {
    }
  }
  

  package step5_lambda_another {
    class IntProduct {
    }
  }
  

  package step5_lambda_another {
    class IntSum {
    }
  }
  

  package step4_lambda {
    class LazyStrategy {
    }
  }
  

  package step3 {
    class Main {
    }
  }
  

  package step2 {
    class Main {
    }
  }
  

  package step1 {
    class Main {
    }
  }
  

  package step5_lambda_another {
    class Main {
    }
  }
  

  package step4_lambda {
    class Main {
    }
  }
  

  package step3 {
    class MallardDuck {
    }
  }
  

  package step1 {
    class MallardDuck {
    }
  }
  

  package step2 {
    class MallardDuck {
    }
  }
  

  package step3 {
    class MuteQuack {
    }
  }
  

  package step3 {
    class Quack {
    }
  }
  

  package step3 {
    interface QuackBehavior {
    }
  }
  

  package step2 {
    interface Quackable {
    }
  }
  

  package step1 {
    class RedHeadDuck {
    }
  }
  

  package step2 {
    class RedHeadDuck {
    }
  }
  

  package step2 {
    class RubberDuck {
    }
  }
  

  package step3 {
    class RubberDuck {
    }
  }
  

  package step1 {
    class RubberDuck {
    }
  }
  

  package step3 {
    class Squeak {
    }
  }
  

  package step4_lambda {
    interface Strategy {
    }
  }
  

  ActiveStrategy -up-|> Strategy
  DecoyDuck -up-|> Duck
  Duck o-- FlyBehavior : flyBehavior
  Duck o-- QuackBehavior : quackBehavior
  FlyNoWay -up-|> FlyBehavior
  FlyWithWings -up-|> FlyBehavior
  IntDifference -up-|> Computation
  IntProduct -up-|> Computation
  IntSum -up-|> Computation
  LazyStrategy -up-|> Strategy
  MallardDuck -up-|> Duck
  MallardDuck -up-|> Duck
  MallardDuck -up-|> Flyable
  MallardDuck -up-|> Quackable
  MallardDuck -up-|> Duck
  MuteQuack -up-|> QuackBehavior
  Quack -up-|> QuackBehavior
  RedHeadDuck -up-|> Duck
  RedHeadDuck -up-|> Flyable
  RedHeadDuck -up-|> Quackable
  RedHeadDuck -up-|> Duck
  RubberDuck -up-|> Quackable
  RubberDuck -up-|> Duck
  RubberDuck -up-|> Duck
  RubberDuck -up-|> Duck
  Squeak -up-|> QuackBehavior


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
